2008-11-24  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/crossbar.pl: New module. Provides a sustainable
	replacement for the Sidebar module, for all Sidebar users
	requiring a cleaner integration of that module with other modules
	like the Table of Contents and Footnote modules. This new module
	also improves Sidebar customizability by permitting users to place
	the "Crossbar" at any position in any page.
	* modules/forms.pl (FormsRules): Generalized so as to support both
	the Sidebar and Crossbar modules.
	* modules/toc.pl (RunMyRulesToc): Generalized so as to support both
	the Sidebar and Crossbar modules.
	* t/crossbar.t: New test suite, testing the Crossbar module.

2008-11-24  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* wiki.pl (GetEditForm): Added the 'upload' class attribute to 
	upload links produced by this function, for CSS stylization.
	(BrowsePage): Calls the new "PrintPageContent" function.
	(PrintPageContent): New function, whose implementation has been
	extracted from the "BrowsePage" function. This permits external
	modules -- like the new Crossbar module -- to override this
	function and thereby print page content in a module-specific
	manner.

2008-11-21  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* wiki.pl (SetHtmlEnvironmentContainer): Corrected a slight, but
	significant, typo.
	* modules/sidebar.pl: Reverted. I underestimated the scope of
	changes needed to bring this module in line with recent, other
	changes to the Table of Contents module. The good news is that the
	reverted Sidebar module now works as expected for all modules except
	the Table of Contents module; of course, the bad news is that the
	reverted Sidebar module no longer works for the Table of Contents
	module. (Unfortunately, we can't have both, here.) I will be
	recommitting my changes to this module as a new module, therefore,
	named "modules/crossbar.pl" -- sometime, soon. That new module