@@ -1,5 +1,11 @@
 2008-11-24  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
+	* modules/creole.pl (CreoleRule): Implemented handling of so-called
+	"interlinks" -- i.e., links to external Wikis via the "$InterMap"
+	page. (So, Creole syntax is now embeddable within interlinks!)
+
+2008-11-24  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
 	* modules/crossbar.pl: New module. Provides a sustainable
 	replacement for the Sidebar module, for all Sidebar users
 	requiring a cleaner integration of that module with other modules
